--- a/app/views/columns/_column_guest.html.erb
+++ b/app/views/columns/_column_guest.html.erb
@@ -1,5 +1,5 @@
 <% @themes.each do |theme| %>
-  <div class="column-roadmap">
+  <div class="column-roadmap preview-guest">
     <h2><%= theme.temporality %></h2>
     <div class="column-content">
       <div class="theme">
