--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -93,7 +93,7 @@ button.roadmap-name:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #979797;
+  background-color: $my-yellow;
   -webkit-transition: .4s;
   transition: .4s;
 }
