--- a/app/assets/stylesheets/components/_kpi.scss
+++ b/app/assets/stylesheets/components/_kpi.scss
@@ -7,11 +7,11 @@
 .kpi .form-group input, .kpi .form-group input:focus,
 .kpi .form-group textarea, .kpi .form-group textarea:focus {
   width: 100%;
-  background: white;
+  background: $my-gray !important;
   border: transparent;
   padding-left:10px;
   box-shadow: none;
-  border: 2px dashed #979797;
+  border: 2px dashed $my-black;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: none;
@@ -21,7 +21,7 @@
 .kpi .form-group input:hover, .kpi .form-group input:focus,
 .kpi .form-group textarea:hover, .kpi .form-group textarea:focus {
   width: 100%;
-  background: white;
+  background: $my-gray !important;
   border: transparent;
   padding-left:10px;
   box-shadow: none;
