--- a/app/assets/stylesheets/components/_theme.scss
+++ b/app/assets/stylesheets/components/_theme.scss
@@ -1,27 +1,17 @@
 .theme {
 }
 
-.theme-img {
-  width: 100%;
-  height: 100px;
-  border-radius: 10px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  margin-bottom: 20px;
-  margin-top: -20px;
-}
-
 .theme .form-group input,
 .theme .form-group textarea, {
   width: 100%;
   padding-left:10px;
   box-shadow: none;
-  border: 2px dashed #979797;
+  border: 1px dashed $my-black;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: none;
   min-height: 41px;
-  background:transparent !important;
+  background: $my-gray !important;
 }
 
 .theme .form-group input:hover, .theme .form-group input:focus,
@@ -30,11 +20,11 @@
   border: transparent;
   padding-left:10px;
   box-shadow: none;
-  border: 2px dashed $my-black;
+  border: 1px dashed $my-black;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: none;
-  background:transparent !important;
+  background: $my-gray !important;
 }
 
 .theme_description {
@@ -52,17 +42,16 @@
 }
 
 .theme-temporality {
-  color: $my-white;
+  color: $my-black;
   font-size: 20px;
   font-weight: bold;
 }
 
-
 .theme-temporality:focus, .theme-temporality:hover {
-  color: $my-white;
+  color: $my-black;
   font-size: 20px;
   font-weight: bold;
-  border: 2px dashed $my-white !important;
+  border: 1px dashed $my-blue !important;
 }
 
 .themes {
