--- a/app/assets/stylesheets/components/_upload-img.scss
+++ b/app/assets/stylesheets/components/_upload-img.scss
@@ -10,19 +10,52 @@
   align-items: center;
   justify-content: space-around;
   border: 1px dashed $my-black;
+  position: relative;
 }
 
-.theme-img {
+.upload-img img {
   width: 100%;
-  height: 100px;
+  height: 100%;
   border-radius: 10px;
   -o-object-fit: cover;
   object-fit: cover;
-  margin-bottom: 20px;
-  margin-top: -20px;
+}
+
+.uploaded {
+  border:0px;
+  background:transparent;
+}
+
+.uploaded:hover {
+  cursor: default;
 }
 
 .upload-img input {
   padding: 20px;
   width: 100%;
+  position: absolute;
+  opacity: 0;
+  height: 100%;
+}
+
+.upload-img input:hover {
+  cursor: pointer;
+}
+
+.upload-form {
+  position: absolute;
+}
+
+.black-filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  justify-content: space-around;
+  color: white;
+  text-align: center;
 }
