--- a/app/views/columns/_column_admin.html.erb
+++ b/app/views/columns/_column_admin.html.erb
@@ -6,13 +6,18 @@
       <%= f.input :temporality, label: false, input_html: {value: theme.temporality, class: "theme-temporality", id: "temporality-#{theme.id}"} %>
       <div class="column-content">
         <div class="upload-img">
-        <%= f.hidden_field :cover_cache %>
-        <%= image_tag theme.cover_url if !theme.cover_url.nil? %>
-        <%= f.file_field :cover, label: "🖼️", id: "picture-#{theme.id}" %>
+            <% if !theme.cover.url.nil? %>
+              <%= image_tag theme.cover.url %>
+              <div class="black-filter">🖼️</div>
+            <% else %>
+              🖼️
+            <% end %>
+            <%= f.file_field :cover, class: "upload-cover", id: "upload1-#{theme.id}" %>
+            <%= f.hidden_field :cover_cache, id: "upload2-#{theme.id}" %>
         </div>
         <%= f.input :name, input_html: {value: theme.name, class: "theme-name", id: "name-#{theme.id}"}, label: "Nom du thème" %>
         <%= f.input :description, input_html: {value: theme.description, class: "theme-description", id: "descthem-#{theme.id}"}  %>
-        <%= f.button :submit, class: "patch", name: "patch-theme",  id: "patchthem-#{theme.id}" %>
+        <%= f.button :submit, class: "patch", name: "patch-theme", style: "display: none", id: "patchthem-#{theme.id}" %>
       <% end %>
         <%= render partial: 'columns/column_admin_kpis.html.erb', locals: {theme: theme} %>
         <%= render partial: 'columns/column_admin_improvements.html.erb', locals: {theme: theme} %>
