--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
   <div class="home-content zi-2">
     <div class="map zi-2">
       <div class="bg-map">
-        <%= image_tag "dot", class: "map-dot" %>
-        <%= image_tag "position", class: "map-position" %>
+        <%= image_tag "dot.svg", class: "map-dot" %>
+        <%= image_tag "position.svg", class: "map-position" %>
       </div>
     </div>
     <div class="home-baseline">
