--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -5,7 +5,6 @@
   box-shadow: 2px 3px 0px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   max-width: 310px;
-  max-height: 130px;
   overflow: hidden;
   position: relative;
   z-index: 10000;
@@ -37,7 +36,7 @@
   top: 70px;
   position: fixed;
   width: 100%;
-  height: 122px;
+  height: 168px;
 }
 
 .dropdown-item {
@@ -96,14 +95,18 @@
   justify-content: space-around;
 }
 
-span.roadmap-name-ellipsis {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  max-width: 9vh;
-  white-space: nowrap;
+div.roadmap-name-ellipsis {
+  max-width: 85%;
   display: inline-flex;
   height: 41px;
   align-items: center;
+}
+
+div.roadmap-name-ellipsis p {
+    text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0;
 }
 
 .roadmap-name {
