--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -20,7 +20,7 @@
 
   <% else %>
 
-    <div class="collapse navbar-collapse pr-4" id="navbarSupportedContent">
+    <div class="pr-4" id="navbarSupportedContent">
       <%= link_to "Connexion", new_user_session_path, class: "c-black" %>
     </div>
 
