--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -68,11 +68,16 @@ button.roadmap-name:hover {
 }
 
 .btn-switch {
-  bottom: 20px;
+  margin-bottom: 20px;
   z-index: 9999;
   max-width: 300px;
-  text-align: center;
-  margin: 10px auto;
+  margin-left: 35px;
+}
+
+@media(max-width: 415px){
+  .btn-switch {
+    margin-left: 20px;
+  }
 }
 
 .btn-switch label {
