--- a/app/assets/stylesheets/components/_vision.scss
+++ b/app/assets/stylesheets/components/_vision.scss
@@ -1,5 +1,6 @@
 .roadmap-vision {
   width: 100%;
+  height: 100%;
 }
 
 .vision-container {
@@ -24,6 +25,7 @@
   border-radius: 10px;
   box-shadow: none;
   min-height: 41px;
+  margin-bottom: 0;
 }
 
 .vision-container .form-group input:hover, .vision-container .form-group input:focus,
@@ -40,17 +42,71 @@
 }
 
 .vision-form {
-  margin: 0 35px;
-  padding: 15px;
-  width: 60%;
-  margin: 0 auto;
+  margin: auto 0;
+  position: relative;
+}
+
+.vision-form p {
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+.vision-form .form-group {
+  margin-bottom: 0;
 }
 
 @media(max-width: 415px) {
   .vision-form {
-    margin: 0 auto;
-    width: calc(100% - 40px);
+    width: calc(100%);
+    margin-top: 20px;
   }
 }
 
+.vision-grid {
+  display: grid;
+  grid-template-columns: 0fr 1fr 6fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 35px;
+  grid-row-gap: 0px;
+  grid-auto-flow: column;
+  margin-top: 20px;
+}
 
+@media(max-width: 415px){
+  .vision-grid {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px;
+    width: 100%;
+  }
+}
+
+.vision-grid:after {
+  content: "";
+  width: 1px;
+  height: 1px;
+}
+
+.vision-grid:before{
+  content: "";
+  width: 1px;
+  height: 1px;
+}
+
+.vision {
+  margin: 0 35px 20px 35px;
+  display: flex;
+}
+
+.vision img {
+  margin-right: 35px;
+}
+
+@media(max-width: 415px) {
+  .vision {
+    margin: 0 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+}
