--- a/app/assets/stylesheets/pages/_roadmaps.scss
+++ b/app/assets/stylesheets/pages/_roadmaps.scss
@@ -1,5 +1,5 @@
 .show-container {
-  padding: 100px 0 20px 0;
+  padding: 90px 0 20px 0;
   min-height: 100vh;
   color: $my-white;
   overflow-x: auto;
@@ -13,5 +13,16 @@
   font-size: 14px;
 }
 
+.roadmap-logo {
+  color: black;
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+}
 
-
+.roadmap-logo img {
+  max-height: 100%;
+  height: auto;
+  height: 100%;
+  object-fit: contain;
+}
