--- a/app/assets/stylesheets/components/_upload-img.scss
+++ b/app/assets/stylesheets/components/_upload-img.scss
@@ -14,17 +14,8 @@
   justify-content: center;
 }
 
-.upload-img img {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  border: 1px solid $my-black;
-}
-
 .uploaded {
-  border:0px;
+  border: 0px;
   background:transparent;
 }
 
@@ -44,6 +35,18 @@
   cursor: pointer;
 }
 
+.upload-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.preview-guest .upload-img img, .uploaded img {
+  border: 1px solid $my-black;
+}
+
 .upload-form {
   position: absolute;
 }
@@ -52,7 +55,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(179, 179, 179, 0.24);
   border-radius: 10px;
   display: flex;
   align-items: center;
