--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,6 +29,11 @@
   text-decoration: none;
 }
 
+.btn-landing {
+  margin-bottom: 4px;
+  text-decoration: none;
+}
+
 
 .btn-landing:hover {
   box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
