--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -18,6 +18,10 @@
   background-color: $my-gray;
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-yellow02 {
   background-color: rgba(255, 185, 6, 0.25);
 }
