--- a/app/assets/stylesheets/components/_emoji.scss
+++ b/app/assets/stylesheets/components/_emoji.scss
@@ -17,7 +17,7 @@
 
 .emoji-link {
   padding: 7px;
-  background: #eaeaea;
+  background: $my-gray;
   border-radius: 25px;
   margin: 0 2px;
   align-items: center;
