--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,10 +2,10 @@
 
 // For example:
 
-$my-blue: #418aff;
+$my-blue: #356AFF;
 $my-red: #F13D3D;
 $my-yellow: #FFB906;
 $my-white: #FFFFFF;
 $my-black: #000000;
 $my-green: #00D94A;
-$my-gray: #eaeaea;
+$my-gray: #EBF1F2;
