--- a/app/views/components/_navbar-home.html.erb
+++ b/app/views/components/_navbar-home.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light d-flex justify-content-between">
+<div class="navbar bg-transparent navbar-expand-sm navbar-light d-flex justify-content-between">
 
   <div class="navbar-home">
     <%= link_to root_path, class: "navbar-brand" do %>
@@ -18,7 +18,7 @@
 
   <% else %>
 
-    <div class="collapse navbar-collapse pr-4" id="navbarSupportedContent">
+    <div class="pr-4" id="navbarSupportedContent">
       <%= link_to "Connexion", new_user_session_path, class: "c-black" %>
     </div>
 
