--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,20 +1,11 @@
 .footer {
-  position: fixed;
-  bottom: 18%;
+  background: $my-white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: 2px solid black;
   p {
-    color: white;
+    color: $my-black;
   }
-}
-
-
-@media(max-width: 415px) {
-  .footer {
-  position: relative;
-  margin-top: 140px;
-  padding-bottom:10px;
-
-  p {
-    color: white;
-  }
-  }
+  padding: 20px 0;
 }
