--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container0">
+<div class="home-container home-container-form">
   <div class="main-content forgot-password zi-9999">
     <h1>Mot de passe oublié ?</h1>
 
@@ -27,19 +27,4 @@
       <%= render "devise/shared/links-2" %>
     </div>
   </div>
-
-  <div class="character zi-2">
-      <%= image_tag "char-white.svg", alt: "fellowmap mascott" %>
-  </div>
 </div>
-
-<!-- Rectangles -->
-
-<div class="rectangle-bg rectangle-bg-top">
-  <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
-</div>
-
-<div class="rectangle-bg rectangle-bg-bottom rectangle-bg-white">
-  <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
-</div>
-
