--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container0">
+<div class="home-container home-container-form">
   <div class="main-content sign-up zi-9999">
     <h1>Editer mon profil</h1>
 
@@ -36,18 +36,7 @@
 
   </div>
 
-  <div class="character zi-2">
-      <%= image_tag "char-red.svg", alt: "fellowmap mascott" %>
-  </div>
 </div>
 
-<!-- Rectangles -->
 
-<div class="rectangle-bg rectangle-bg-top">
-  <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
-</div>
-
-<div class="rectangle-bg rectangle-bg-bottom rectangle-bg-red">
-  <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
-</div>
 
